<resources>
    <string name="app_name">SimpleApp</string>
    <string name="add">Add</string>
    <string name="sub">Sub</string>
    <string name="counter_init">0</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="test_lucky">测测今日运势</string>
    <string name="counter">Counter</string>
    <string name="gallery">Gallery</string>
    <string name="luckyday">LuckyDay</string>
    <string name="today_lucky">今日运势</string>
    <string name="load_image">Load Image</string>
</resources>
