<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/main"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_image"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/counter_activity_button"
                style="@style/MainButtonStyle"
                android:text="@string/counter"/>

            <Button
                android:id="@+id/login_activity_button"
                style="@style/MainButtonStyle"
                android:text="@string/login"/>

            <Button
                android:id="@+id/gallery_activity_button"
                style="@style/MainButtonStyle"
                android:text="@string/gallery"/>

            <Button
                android:id="@+id/lucky_day_activity_button"
                style="@style/MainButtonStyle"
                android:text="@string/luckyday"/>

            <Button
                android:id="@+id/load_iamge_activity_button"
                style="@style/MainButtonStyle"
                android:text="@string/load_image"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>